fix: table of contents overlapping in ie11

--- a/src/scss/_components.table-of-contents.scss
+++ b/src/scss/_components.table-of-contents.scss
@@ -40,6 +40,7 @@
     display: flex;
     align-items: center;
     margin: 0.5rem 0;
+    max-width: 100%;
 
     @media (min-width: $bp-md) {
       padding-left: 1rem;
